ELS Code/main/default/objects/Reservation__c/fields/Rate_Group__c.field-meta.xml
<CustomField>
    <fullName>Rate_Group__c</fullName>
    <label>(Rate Group)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>