ELS Code/main/default/objects/Reservation__c/fields/Rental__c.field-meta.xml
<CustomField>
    <fullName>Rental__c</fullName>
    <formula>IF( OR( Unit_Is_Rental__c = &quot;Yes&quot;, Unit_Is_Rental__c=&quot;Y&quot;), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rental Site</label>
    <type>Checkbox</type>
</CustomField>