ELS Code/main/default/objects/Reservation__c/fields/Rental_or_RV__c.field-meta.xml
<CustomField>
    <fullName>Rental_or_RV__c</fullName>
    <formula>IF(OR( Unit_Is_Rental__c = &quot;Y&quot;, Unit_Is_Rental__c = &quot;Yes&quot;), &quot;Rental&quot;, &quot;RV&quot;)</formula>
    <label>Rental or RV</label>
    <type>Text</type>
</CustomField>