ELS Code/main/default/objects/Reservation__c/fields/Rental_Site__c.field-meta.xml
<CustomField>
    <fullName>Rental_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fetches the value from Site.Rental field</description>
    <label>Rental Site?</label>
    <type>Checkbox</type>
</CustomField>