ELS Code/main/default/objects/Reservation__c/fields/Reservation_Number__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Number__c</fullName>
    <label>Reservation Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>