ELS Code/main/default/objects/Reservation__c/fields/Reservation_Source__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Source__c</fullName>
    <label>Reservation Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>