ELS Code/main/default/objects/Reservation__c/fields/Resort_Map__c.field-meta.xml
<CustomField>
    <fullName>Resort_Map__c</fullName>
    <formula>Property_ID__r.Resort_Map_RVOTG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resort Map RVOTG</label>
    <type>Text</type>
</CustomField>