ELS Code/main/default/objects/Reservation__c/fields/Rez_ID__c.field-meta.xml
<CustomField>
    <fullName>Rez_ID__c</fullName>
    <externalId>true</externalId>
    <label>Reservation ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>