ELS Code/main/default/objects/Reservation__c/fields/RV_Size__c.field-meta.xml
<CustomField>
    <fullName>RV_Size__c</fullName>
    <label>RV Size</label>
    <length>100</length>
    <type>Text</type>
</CustomField>