ELS Code/main/default/objects/Reservation__c/fields/Seasonal__c.field-meta.xml
<CustomField>
    <fullName>Seasonal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Reservation with a number of nights &gt;27 days but less than 186 days</description>
    <label>Seasonal</label>
    <type>Checkbox</type>
</CustomField>