ELS Code/main/default/objects/Reservation__c/fields/Silverpop_Email_Activity__c.field-meta.xml
<CustomField>
    <fullName>Silverpop_Email_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Silverpop Email Activity</label>
    <referenceTo>silverpop__Silverpop_Email_Activity__c</referenceTo>
    <relationshipLabel>Silverpop Email Activity</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>