ELS Code/main/default/objects/Reservation__c/fields/Silverpop_Sent_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Silverpop_Sent_Date_Time__c</fullName>
    <description>Date/Time Email was sent.</description>
    <formula>Silverpop_Email_Activity__r.silverpop__Sent_Date_Time__c</formula>
    <inlineHelpText>Date/Time Email was sent.</inlineHelpText>
    <label>Silverpop Sent Date/Time</label>
    <type>DateTime</type>
</CustomField>