ELS Code/main/default/objects/Reservation__c/fields/Site_Charges__c.field-meta.xml
<CustomField>
    <fullName>Site_Charges__c</fullName>
    <label>Site Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>