ELS Code/main/default/objects/Reservation__c/fields/Site_Fee_Discount__c.field-meta.xml
<CustomField>
    <fullName>Site_Fee_Discount__c</fullName>
    <formula>Amount_due_before_taxes__c  -  Discounts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Fee Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>