ELS Code/main/default/objects/Reservation__c/fields/Site_Location__c.field-meta.xml
<CustomField>
    <fullName>Site_Location__c</fullName>
    <description>Field sent from Digi &amp; Included in Jitterbit transformations.</description>
    <label>Site Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>