ELS Code/main/default/objects/Reservation__c/fields/Site_Number__c.field-meta.xml
<CustomField>
    <fullName>Site_Number__c</fullName>
    <label>Site Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>