ELS Code/main/default/objects/Reservation__c/fields/Stayed_at_San_Fran__c.field-meta.xml
<CustomField>
    <fullName>Stayed_at_San_Fran__c</fullName>
    <formula>IF(AND( Unique_Property_ID__c =&quot;5047&quot;,Arrival_Date__c &gt;DATE(2018,01,01)),TRUE,FALSE)</formula>
    <label>Stayed at San Fran</label>
    <type>Checkbox</type>
</CustomField>