ELS Code/main/default/objects/Reservation__c/fields/Summary_Formula__c.field-meta.xml
<CustomField>
    <fullName>Summary_Formula__c</fullName>
    <description>Power of 1 formula for reporting</description>
    <formula>1</formula>
    <label>Summary Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>