ELS Code/main/default/objects/Reservation__c/fields/TC_Add_Date_Booked_Date__c.field-meta.xml
<CustomField>
    <fullName>TC_Add_Date_Booked_Date__c</fullName>
    <formula>Contact__r.Trails_Collection_Add_Date__c &gt; Booked_Date__c</formula>
    <label>TC Add Date&gt;Booked Date</label>
    <type>Checkbox</type>
</CustomField>