ELS Code/main/default/objects/Reservation__c/fields/Trans_Gross__c.field-meta.xml
<CustomField>
    <fullName>Trans_Gross__c</fullName>
    <label>Trans_Gross</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>