ELS Code/main/default/objects/Reservation__c/fields/Transient__c.field-meta.xml
<CustomField>
    <fullName>Transient__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Reservation with a number of nights &lt;28 days</description>
    <label>Transient</label>
    <type>Checkbox</type>
</CustomField>