ELS Code/main/default/objects/Reservation__c/fields/Travel_Dates__c.field-meta.xml
<CustomField>
    <fullName>Travel_Dates__c</fullName>
    <description>Arrival and Departure Date</description>
    <formula>TEXT(MONTH(Arrival_Date__c))+&quot;/&quot;+TEXT(DAY(Arrival_Date__c))+&quot;/&quot;+TEXT(YEAR(Arrival_Date__c)) + &quot; - &quot; + TEXT(MONTH(Departure_Date__c))+&quot;/&quot;+TEXT(DAY(Departure_Date__c))+&quot;/&quot;+TEXT(YEAR(Departure_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Travel Dates</label>
    <type>Text</type>
</CustomField>