ELS Code/main/default/objects/Reservation__c/fields/Type_Class_Label__c.field-meta.xml
<CustomField>
    <fullName>Type_Class_Label__c</fullName>
    <label>Type Class Label</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3rd Party Rentals</fullName>
            </value>
            <value>
                <fullName>Condos</fullName>
            </value>
            <value>
                <fullName>ELS Lease/Sub</fullName>
            </value>
            <value>
                <fullName>Encore Rentals</fullName>
            </value>
            <value>
                <fullName>Encore Resorts</fullName>
            </value>
            <value>
                <fullName>Encore Slips</fullName>
            </value>
            <value>
                <fullName>Getaway</fullName>
            </value>
            <value>
                <fullName>Member Rentals</fullName>
            </value>
            <value>
                <fullName>Member Sites</fullName>
            </value>
            <value>
                <fullName>Member Tents</fullName>
            </value>
            <value>
                <fullName>Member Trailers</fullName>
            </value>
            <value>
                <fullName>Park Use Day Use</fullName>
            </value>
            <value>
                <fullName>Park Use Facilities</fullName>
            </value>
            <value>
                <fullName>Park Use Rentals</fullName>
            </value>
            <value>
                <fullName>Park Use Sites</fullName>
            </value>
            <value>
                <fullName>Park Use Tents</fullName>
            </value>
            <value>
                <fullName>Park Use Trailers</fullName>
            </value>
            <value>
                <fullName>Public Rentals</fullName>
            </value>
            <value>
                <fullName>Public Site</fullName>
            </value>
            <value>
                <fullName>Public Tents</fullName>
            </value>
            <value>
                <fullName>Public Use Day Use</fullName>
            </value>
            <value>
                <fullName>Reciprocal Sites</fullName>
            </value>
            <value>
                <fullName>Rentals</fullName>
            </value>
            <value>
                <fullName>Unassigned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>