ELS Code/main/default/objects/Reservation__c/fields/Unique_Property_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_Property_ID__c</fullName>
    <formula>Property_ID__r.Property_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Property ID</label>
    <type>Text</type>
</CustomField>