ELS Code/main/default/objects/Reservation__c/fields/Unit_ID__c.field-meta.xml
<CustomField>
    <fullName>Unit_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit ID</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>