ELS Code/main/default/objects/Reservation__c/fields/Unit_Is_Rental__c.field-meta.xml
<CustomField>
    <fullName>Unit_Is_Rental__c</fullName>
    <formula>TEXT(Unit_ID__r.Is_Rental__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Is Rental?</label>
    <type>Text</type>
</CustomField>