ELS Code/main/default/objects/Reservation__c/fields/Unit_Site_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Site_Type__c</fullName>
    <formula>Unit_ID__r.Site_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Site Type</label>
    <type>Text</type>
</CustomField>