ELS Code/main/default/objects/Reservation__c/fields/Update_for_Will__c.field-meta.xml
<CustomField>
    <fullName>Update_for_Will__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update for Will</label>
    <type>Checkbox</type>
</CustomField>