ELS Code/main/default/objects/Reservation__c/fields/Updated_Property_Name__c.field-meta.xml
<CustomField>
    <fullName>Updated_Property_Name__c</fullName>
    <formula>Property_ID__r.Property_Name__c</formula>
    <label>Property Name</label>
    <type>Text</type>
</CustomField>