ELS Code/main/default/objects/Reservation__c/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <label>Vehicle Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>