ELS Code/main/default/objects/Reservation__c/fields/Win_Back_Body_Copy__c.field-meta.xml
<CustomField>
    <fullName>Win_Back_Body_Copy__c</fullName>
    <description>Win back automation from Acoustic.</description>
    <inlineHelpText>Win back automation from Acoustic.</inlineHelpText>
    <label>Win Back Body Copy</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>