ELS Code/main/default/objects/Reservation__c/fields/X3_Days__c.field-meta.xml
<CustomField>
    <fullName>X3_Days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3 Days</label>
    <type>Checkbox</type>
</CustomField>