ELS Code/main/default/objects/Reservation__c/recordTypes/Voyager_Reservation.recordType-meta.xml
<RecordType>
    <fullName>Voyager_Reservation</fullName>
    <active>true</active>
    <label>Voyager Reservation</label>
</RecordType>