ELS Code/main/default/objects/Reservation__c/validationRules/Phone_validation_on_reservation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_validation_on_reservation</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(
				AND(
					ISNUMBER(Phone__c),  
					 LEN(Phone__c) = 9
					)
				)</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>The phone should be 9 digits only</errorMessage>
</ValidationRule>