ELS Code/main/default/objects/Reservation__c/validationRules/Source_ID_Must_be_entered.validationRule-meta.xml
<ValidationRule>
    <fullName>Source_ID_Must_be_entered</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Source_ID__c ),ISNEW())</errorConditionFormula>
    <errorDisplayField>Source_ID__c</errorDisplayField>
    <errorMessage>Source ID must be entered.</errorMessage>
</ValidationRule>