ELS Code/main/default/objects/Reservation__c/listViews/Bulow_RV_On_Site_Upgradeable.listView-meta.xml
<ListView>
    <fullName>Bulow_RV_On_Site_Upgradeable</fullName>
    <columns>Contact__c</columns>
    <columns>Arrival_Date__c</columns>
    <columns>Departure_Date__c</columns>
    <columns>Contact_Email__c</columns>
    <columns>Contact_Phone__c</columns>
    <columns>Customer_Type__c</columns>
    <columns>Amount_due_before_taxes__c</columns>
    <columns>Unit_Site_Type__c</columns>
    <columns>Discounts__c</columns>
    <columns>Product_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Arrival_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Departure_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Reservation_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Unit_Site_Type__c</field>
        <operation>notContain</operation>
        <value>storage</value>
    </filters>
    <filters>
        <field>Unique_Property_ID__c</field>
        <operation>equals</operation>
        <value>7410</value>
    </filters>
    <filters>
        <field>Amount_due_before_taxes__c</field>
        <operation>lessThan</operation>
        <value>1000</value>
    </filters>
    <filters>
        <field>Membership_ID__c</field>
        <operation>startsWith</operation>
        <value>290</value>
    </filters>
    <filters>
        <field>Membership_ID__c</field>
        <operation>notContain</operation>
        <value>298</value>
    </filters>
    <label>Bulow RV On-Site Upgradeable</label>
    <sharedTo>
        <group>Gateway_CD_Bulow</group>
    </sharedTo>
</ListView>