ELS Code/main/default/objects/Reservation__c/listViews/Cactus_Gardens_On_Site_Retail.listView-meta.xml
<ListView>
    <fullName>Cactus_Gardens_On_Site_Retail</fullName>
    <columns>Contact__c</columns>
    <columns>Site_Number__c</columns>
    <columns>Arrival_Date__c</columns>
    <columns>Departure_Date__c</columns>
    <columns>Contact_Email__c</columns>
    <columns>Contact_Phone__c</columns>
    <columns>Customer_Type__c</columns>
    <columns>Site_Fee_Discount__c</columns>
    <columns>Unit_Site_Type__c</columns>
    <columns>Discounts__c</columns>
    <columns>Product_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Arrival_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Departure_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Reservation_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Unit_Site_Type__c</field>
        <operation>notContain</operation>
        <value>storage</value>
    </filters>
    <filters>
        <field>Unique_Property_ID__c</field>
        <operation>equals</operation>
        <value>7690</value>
    </filters>
    <filters>
        <field>Customer_Type__c</field>
        <operation>equals</operation>
        <value>Retail</value>
    </filters>
    <label>Cactus Gardens On-Site Retail</label>
    <sharedTo>
        <group>Cactus_Gardens_Capri</group>
    </sharedTo>
</ListView>